# ogc

./: .gitignore  Cargo.toml  LICENSE  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
resources/test/wmts/capabilities/: geopf.xml
src/: lib.rs  wms.rs  wmts.rs
src/ows/: v1_1_0.rs
src/ows/v1_1_0/: iso_19115.rs  service_identification.rs
src/wms/: map.rs
src/wmts/: capabilities.rs  tile.rs
tests/: wtms.rs
