[package]
name = "ogc"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros"] }
reqwest = { version = "0.12.28", features = [
	"blocking",
	"rustls-tls",
], default-features = false }

serde = { version = "1.0.228", features = ["serde_derive"] }
quick-xml = { version = "0.38.4", features = ["serialize", "overlapped-lists"] }
thiserror = "2.0.17"
